[tool.poetry]
name = "abc-gpx"
version = "0.1.0"
description = "Geophysical inversion based on approximate Bayesian computation methods."
authors = ["ignorant-fool <harrisonsbutton@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.1"
numpy = "^1.23.4"
matplotlib = "^3.6.1"
Cython = "^0.29.32"
SimPEG = "^0.17.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
